Улучшена поддержка версий ниже 1.19.3